Actualizando migracion de LogIn, roles, usuarios y ventas

--- a/ProyectoFinalAplicada.csproj
+++ b/ProyectoFinalAplicada.csproj
@@ -52,4 +52,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\MendozaCreation.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
